Bug 401950 - Transient children aren't minimized with their parent
Summary: Transient children aren't minimized with their parent
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-10 11:15 UTC by Kai Uwe Broulik
Modified: 2018-12-14 19:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2018-12-10 11:15:00 UTC
SUMMARY
When minimizing the parent of a transient window, the transient child isn't minimized with it like it is on X.

STEPS TO REPRODUCE
1. Open Kate, KWrite, or any other kxmlgui app
2. Open Help → About $application
3. Minimize application window

OBSERVED RESULT
The application window minimized but the About window stays there

EXPECTED RESULT
The application window and About window are minimized together like they are on X
Comment 1 Martin Flöser 2018-12-10 13:39:22 UTC
Yeah, Just the other day I stumbled over the code for this and noticed a todo.
Comment 2 Vlad Zahorodnii 2018-12-14 19:21:22 UTC
Git commit 7a28e0fe9ae21afa920f2d1c9262c2a15334c2de by Vlad Zagorodniy.
Committed on 14/12/2018 at 19:15.
Pushed by vladz into branch 'master'.

[wayland] Minimize transients together with parent

Summary:
If a parent window is minimized, then its transients have to be
minimized as well, so the minimize behavior is the same on both
X11 and Wayland.
FIXED-IN: 5.15.0

Reviewers: #kwin, graesslin

Reviewed By: #kwin, graesslin

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D17570

M  +47   -0    autotests/integration/shell_client_test.cpp
M  +1    -0    shell_client.cpp

https://commits.kde.org/kwin/7a28e0fe9ae21afa920f2d1c9262c2a15334c2de